changed restart from always to on-failure

--- a/el7/mesos-dns.service
+++ b/el7/mesos-dns.service
@@ -5,8 +5,7 @@ Wants=network.target
 
 [Service]
 ExecStart=/usr/bin/mesos-dns -config=/etc/mesos-dns/config.json
-Restart=on-abort
-Restart=always
+Restart=on-failure
 RestartSec=20
 
 [Install]
