add docker image support

--- a/docker-rootfs/Dockerfile
+++ b/docker-rootfs/Dockerfile
@@ -9,7 +9,17 @@ RUN yum -y update && \
 
 RUN mkdir -p /build/ && \
     mkdir -p /package/root/ && \
+    mkdir -p /package/root/etc/ && \
     mkdir -p /package/root/usr/bin/
+
+RUN cd /package/root/etc/ && ln -s /proc/mounts mtab
+
+COPY etc/group /package/root/etc/
+COPY etc/hostname /package/root/etc/
+COPY etc/hosts /package/root/etc/
+COPY etc/nsswitch.conf /package/root/etc/
+COPY etc/passwd /package/root/etc/
+COPY etc/resolv.conf /package/root/etc/
 
 COPY bap.sh /usr/bin/bap
 
