--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM busybox
+FROM scratch
 MAINTAINER Mesosphere Package Builder <support@mesosphere.io>
-ADD mesos-dns*tar.gz /
+ADD mesos-dns_rootfs.tar.gz /
+
 CMD ["/usr/bin/mesos-dns"]
