--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM scratch
 MAINTAINER Mesosphere Package Builder <support@mesosphere.io>
 ADD mesos-dns_rootfs.tar.gz /
-
+EXPOSE 53
 CMD ["/usr/bin/mesos-dns"]
