--- a/common/Makefile
+++ b/common/Makefile
@@ -22,6 +22,35 @@ el7: INIT_CONFIG = $(SYSTEMD_CONFIG)
 el7: DIST = el7
 el7: package
 
+.PHONY: el6
+el6: PKG_TYPE = $(RPM_PKG_TYPE)
+el6: INIT_CONFIG = $(UPSTART_CONFIG)
+el6: DIST = el6
+el6: package
+
+.PHONY: ubuntu-trusty
+ubuntu-trusty: PKG_TYPE = $(DEB_PKG_TYPE)
+ubuntu-trusty: INIT_CONFIG = $(UPSTART_CONFIG)
+ubuntu-trusty: DIST = ubuntu1404
+ubuntu-trusty: package
+
+.PHONY: debian-wheezy
+debian-wheezy: PKG_TYPE = $(DEB_PKG_TYPE)
+debian-wheezy: INIT_CONFIG = $(SYSVINIT_CONFIG)
+debian-wheezy: DIST = debian77
+debian-wheezy: package
+
+.PHONY: docker-rootfs
+docker-rootfs: copy-mesos-dns
+	cp /lib64/ld-linux-x86-64.so.2 /package/root/lib64/
+	cp /lib64/libc.so.6 /package/root/lib64/
+	cp /lib64/libnss_compat.so.2 /package/root/lib64/
+	cp /lib64/libnss_dns.so.2 /package/root/lib64/
+	cp /lib64/libnss_files.so.2 /package/root/lib64/
+	cp /lib64/libpthread.so.0 /package/root/lib64/
+	cd /package/root && tar czvf ../mesos-dns_rootfs.tar.gz .
+	cp /package/mesos-dns_rootfs.tar.gz /target/
+
 .PHONY: package
 package: copy-mesos-dns
 	cd /package && \
