--- a/ubuntu1404/Dockerfile
+++ b/ubuntu1404/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Mesosphere Package Builder <support@mesosphere.io>
 
 RUN apt-get -y update && \
     apt-get -y upgrade && \
-    apt-get -y install golang ruby ruby-dev build-essential git && \
+    apt-get -y install curl ruby ruby-dev build-essential git && \
     apt-get -y clean && \
     gem install fpm
 
@@ -13,7 +13,18 @@ RUN mkdir -p /build/ && \
     mkdir -p /package/root/etc/mesos-dns/ && \
     mkdir -p /package/root/etc/init/
 
-COPY mesos-dns.conf /package/root/etc/init/
-COPY bap.sh /usr/bin/bap
+RUN curl -O https://storage.googleapis.com/golang/go1.4.1.linux-amd64.tar.gz && \
+    tar -C /usr/local -xzf go1.4.1.linux-amd64.tar.gz
 
-CMD ["bap"]
+ENV PATH /usr/local/go/bin:$PATH
+ENV GOPATH /build
+
+RUN go get github.com/tools/godep && \
+    cd $GOPATH/src/github.com/tools/godep && \
+    go build -o godep && \
+    cp godep /bin/
+
+COPY Makefile /
+COPY mesos-dns.conf /package/root/etc/init/
+
+CMD ["make", "ubuntu-trusty"]
