--- a/docker-rootfs/Dockerfile
+++ b/docker-rootfs/Dockerfile
@@ -7,19 +7,18 @@ RUN yum -y update && \
     yum -y install golang && \
     yum clean all
 
-RUN mkdir -p /build/ && \
-    mkdir -p /package/root/ && \
+ENV GOPATH /go
+ENV PATH $GOPATH/bin:$PATH
+
+RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
+
+RUN mkdir -p /package/root/ && \
     mkdir -p /package/root/etc/ && \
     mkdir -p /package/root/usr/bin/ && \
     mkdir -p /package/root/etc/mesos-dns/ && \
     mkdir -p /package/root/lib64/
 
-ENV GOPATH /build
-
-RUN go get github.com/tools/godep && \
-    cd $GOPATH/src/github.com/tools/godep && \
-    go build -o godep && \
-    cp godep /bin/
+RUN go get github.com/tools/godep
 
 RUN cd /package/root/etc/ && ln -s /proc/mounts mtab
 
@@ -31,5 +30,7 @@ COPY etc/passwd /package/root/etc/
 COPY etc/resolv.conf /package/root/etc/
 
 COPY Makefile /
+
+WORKDIR /
 
 CMD ["make", "docker-rootfs"]
