--- a/el7/Dockerfile
+++ b/el7/Dockerfile
@@ -8,19 +8,20 @@ RUN yum -y update && \
     yum clean all && \
     gem install fpm
 
-RUN mkdir -p /build/ && \
-    mkdir -p /package/root/ && \
+ENV GOPATH /go
+ENV PATH $GOPATH/bin:$PATH
+
+RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
+
+RUN mkdir -p /package/root/ && \
     mkdir -p /package/root/usr/bin/ && \
     mkdir -p /package/root/etc/mesos-dns/
 
-ENV GOPATH /build
-
-RUN go get github.com/tools/godep && \
-    cd $GOPATH/src/github.com/tools/godep && \
-    go build -o godep && \
-    cp godep /bin/
+RUN go get github.com/tools/godep
 
 COPY mesos-dns.service /package/root/usr/lib/systemd/system/
 COPY Makefile /
+
+WORKDIR /
 
 CMD ["make", "el7"]
